# biped_lower

./: .gitignore  CHECKPOINTS.md  README.md  __init__.py  biped_distill_rsl.py  biped_env_cfg.py  biped_env_cfg_v54_continuous.py  biped_finetune_student_rsl.py  biped_mdp.py  biped_play_record.py  biped_play_rsl.py  biped_play_torques.py  biped_rough_env_cfg.py  biped_student_env_cfg.py  biped_symmetry.py  biped_train_rsl.py  check_zmp.py  check_zmp_render.py  clean_zmp.py  combine_torque_video.py  commit_v129.sh  compare_xml.py  export_12000.py  export_23999.py  extract_left_moving_blocks.py  extract_moving_blocks.py  fix_actuators.py  fix_battery_hierarchy.py  fix_battery_light.py  fix_battery_light2.py  fix_battery_light3.py  fix_battery_light4.py  fix_battery_visual.py  fix_can.py  fix_can_bus_node.py  fix_csv_play.py  fix_deploy_gains.py  fix_mjcf_format.py  fix_play_mujoco.py  fix_stats.py  (+43 more)
actuator_net/: dataset.py  dataset_flat.py  foot_pitch_net.pt  foot_roll_net.pt  hip_pitch_net.pt  hip_roll_net.pt  hip_yaw_net.pt  knee_net.pt  model.py  plot_summary.py  record_data.py  sysid_data_left_moving_only.csv  sysid_data_right_moving_only.csv  sysid_isaac_R_hip_pitch_chirp.csv  train.py  train_all_combined.py  train_all_right.py  train_flat.py  validate.py
actuator_net/models_bench_only/: foot_pitch_net.pt  foot_roll_net.pt  hip_pitch_net.pt  hip_roll_net.pt  hip_yaw_net.pt  knee_net.pt
actuator_net/models_left_only/: foot_pitch_net.pt  foot_roll_net.pt  hip_pitch_net.pt  hip_roll_net.pt  hip_yaw_net.pt  knee_net.pt  train.py
debug/: README.md  biped_debug.py  biped_debug2.py  biped_debug4.py  debug_air_time.py  debug_feet_contact.py  debug_v37.py  test_import.py
deploy/: ARCHITECTURE.md  BRINGUP.md  biped_v94_29998.onnx  biped_v95_38600.onnx  biped_v96_42200.onnx  biped_v96_45400.onnx  calibration.yaml  model_15199.pt  mujoco_v94.csv  mujoco_v95_38600.csv  mujoco_v96_39400.csv  mujoco_v96_42200.csv  requirements.txt  student_flat.onnx  v122_teacher_28000_tanh.onnx  v126_student_2200_tanh.onnx  v126_student_4600_tanh.onnx  v68b_student_flat.onnx  v74_student_1000_tanh.onnx  v74_student_7200_tanh.onnx  v76_student_2800_tanh.onnx  v76_student_5000_tanh.onnx  v76_student_5600_tanh.onnx  v76_teacher_17800_tanh.onnx  v78_student_5000_tanh.onnx  v78_teacher_9800_tanh.onnx  v80_student_heavy_5800_tanh.onnx  v81_student_light_8400_tanh.onnx  v81_teacher_light_5600_tanh_works_in_mujoco_light.onnx
deploy/biped_ws/: calibration.yaml  calibration_2026-03-16.yaml  calibration_light.yaml  setup_biped.bash
deploy/biped_ws/src/biped_bringup/: LAUNCH.md  package.xml  setup.cfg  setup.py
deploy/biped_ws/src/biped_bringup/config/: chirp.yaml  control_params.yaml  robot.yaml  robot_jetson.yaml  robot_single_bus.yaml  robot_waveshare.yaml  step.yaml  trajectory.csv  wiggle.yaml  zmp_config.yaml
deploy/biped_ws/src/biped_bringup/launch/: bringup.launch.py  calibrate.launch.py  hardware.launch.py  policy_test.launch.py  record.launch.py  teleop.launch.py
deploy/biped_ws/src/biped_control_cpp/: CMakeLists.txt  biped_env_cfg.py  package.xml
deploy/biped_ws/src/biped_control_cpp/include/biped_control_cpp/: obs_builder.hpp
deploy/biped_ws/src/biped_control_cpp/src/: obs_builder.cpp  policy_node.cpp  safety_node.cpp  state_machine_node.cpp
deploy/biped_ws/src/biped_driver/: package.xml  setup.py
deploy/biped_ws/src/biped_driver/biped_driver/: can_bus_node.py  can_bus_node_async.py  im10a_driver.py  im10a_imu_node.py  imu_node.py  robstride_can.py
deploy/biped_ws/src/biped_driver/biped_driver/robstride_dynamics/: __init__.py  bus.py  protocol.py  table.py  waveshare_bus.py
deploy/biped_ws/src/biped_driver/launch/: imu_test.launch.py
deploy/biped_ws/src/biped_driver_cpp/: CMakeLists.txt  package.xml
deploy/biped_ws/src/biped_driver_cpp/include/biped_driver_cpp/: ankle_linkage.hpp  bno085_reader.hpp  im10a_reader.hpp  motor_manager.hpp  robstride_bus.hpp
deploy/biped_ws/src/biped_driver_cpp/src/: bno085_node.cpp  bno085_reader.cpp  can_bus_node.cpp  im10a_node.cpp  im10a_reader.cpp  motor_manager.cpp  robstride_bus.cpp  single_motor_node.cpp
deploy/biped_ws/src/biped_teleop/: package.xml  setup.cfg  setup.py
deploy/biped_ws/src/biped_teleop/biped_teleop/: __init__.py  keyboard_teleop.py
deploy/biped_ws/src/biped_unified_cpp/: CMakeLists.txt  package.xml
deploy/biped_ws/src/biped_unified_cpp/src/: unified_node.cpp
deploy/foxglove/: biped_hardware.json  biped_joint_tracking.json  biped_main.json
deploy/scripts/: decode_can.sh  generate_zmp_trajectory.py  motor_sysid.py  motor_sysid_isaac.py  robstride.dbc  scan_motors.py  setup_can.sh  setup_can_jetson.sh  setup_can_usb.sh  setup_directions.py  test_can_latency.py  test_hip_yaw.py  test_imu_latency.py
legacy/: biped_env_cfg_v24.py  biped_env_cfg_v55_impact_based.py  biped_env_cfg_v73.py  biped_env_cfg_v74_latest.py  biped_play_skrl.py  biped_train_skrl.py  play_skrl.sh  train_skrl.sh
legacy/agents/: skrl_flat_ppo_cfg.yaml
mjcf/: README.md  biped.xml
mjcf/sim2sim/: robot.mjcf  robot_heavy.mjcf  robot_light.mjcf  robot_pos.mjcf
sim2sim/: README.md  build_mjcf.py  play_csv_physics_mujoco.py  play_mujoco.py  play_traj_mujoco.py  render_zmp_trajectory_mujoco.py  stand_mujoco.py
sysid/: README.md  sysid_config.py  sysid_isaac.py
urdf/: README.md  robot.urdf
urdf/assets/: arb_uj111_cross_bearing.part  assy_formfg___kc_d_107l_l_cover.part  assy_formfg___kc_d_107r_r_cover.part  assy_formfg___kd_b_102b_torso_btm.part  ball_bearing_37x25x7.part  foot_6061.part  kd_d_101l_6061.part  kd_d_101r_6061.part  kd_d_102l_6061.part  kd_d_102r_6061.part  kd_d_103l_6061.part  (+31 more)
winners/: README.md  local_render_12000.csv  local_render_15199.csv  local_render_23999.csv  mujoco_v128_vel0.3.csv  mujoco_v128_vel0.csv  v52_model_48600.pt  v57_model_2899.pt  v57_rough_model_19200.pt  v57_rough_model_6498.pt  v57_student_flat_model_4200.pt  v72_teacher_5999.pt  v72_teacher_8998.pt  v74_student_1000.pt  v74_teacher_16600.pt  v74_teacher_18400.pt  v74_teacher_18400_actions.csv  v76_teacher_soft_ankles_17800.pt  v81_light_render.csv
(+414 files in other folders)
