<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>biped_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and config for biped robot</description>
  <maintainer email="abhinav.roy@cleanelectric.in">Abhinav Roy</maintainer>
  <license>MIT</license>

  <exec_depend>biped_driver</exec_depend>
  <exec_depend>biped_control</exec_depend>
  <exec_depend>biped_teleop</exec_depend>
  <exec_depend>biped_tools</exec_depend>
  <exec_depend>biped_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
