<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>biped_unified_cpp</name>
  <version>0.1.0</version>
  <description>Unified sense-and-control node — single-process IMU + CAN + policy loop</description>
  <maintainer email="abhinav.roy@cleanelectric.in">Abhinav Roy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>biped_msgs</depend>
  <depend>biped_driver_cpp</depend>
  <depend>biped_control_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
